--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<img src="images/chua75.jpg" alt="Amy Chua photo">
 	</main>
 	<footer>
-		<p>&copy; Abdelmalek Benaissa, 2022</p>
+		<p>&copy; Abdelmalek Benaissa, October 25 2022</p>
 	</footer>
 </body>
 </html>
